Support nested function in SELECT clause (#1490) (#1518)
Users can now query nested fields in an index.

---------


(cherry picked from commit fbc72a41ef66d33c4650171260ddf8c8702903ca)

Signed-off-by: forestmvey <forestv@bitquilltech.com>